--- a/public/index.html
+++ b/public/index.html
@@ -8,4 +8,5 @@
 <body>
   <main></main>
 </body>
+<script src="https://kit.fontawesome.com/5a3a96e928.js" crossorigin="anonymous"></script>
 </html>
